--- a/gb/19/9/26/n11547362.md
+++ b/gb/19/9/26/n11547362.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pjtbkq381/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pjtbkq381/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pjtbkq381/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pjtbkq381/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pjtbkq381/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>洪微：川普高调摊牌? 北京“十一”更恐慌</h2>
-<a href="https://git.io/JTdD2"><img width="600" src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dfu0th2rj4x8t.cloudfront.net/Q2rbFnmnt"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2019年09月26日讯】9月24日，<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在联合国大会演讲，对北京“火力全开”。川普在发言中，进一步阐明了，美国纠正与中国不平衡贸易的决心不可动摇，并全面展示美国实力，高调向北京摊牌。</p>
-<p>在演讲中，<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>发出了明确的信息：不仅要赢得<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E8%B4%B8%E6%98%93%E6%88%98.md#1">贸易战</a>，还要驱除<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>，更要维护天赋人权。</p>
-<p>从2016年美国总统选举开始，川普首先展示了“美国优先”政策，不少人还以为，美国只能顾自己了。<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>也被“蒙了”，私下暗笑，美国在全球的领导力在持续下降，自顾不暇，竟以“商人”看扁川普。</p>
-<p>这一次联大发言，川普高调宣布，美国将领导世界走出混乱，建立新的秩序。川普也直接点名，目前世界乱局的始作俑者，就是<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>，治理乱局，先从治理中共开始。</p>
-<p>川普的发言中，关于对中国贸易的部分，直接向中共高调摊牌；如果贯穿整个发言，以及在联合国大会的特殊场合，川普无异于向中共下了战书。川普的高调发言，其它国家听了，可能还只是有些惊讶，对中共而言，却如坐针毡，十分恐慌，甚至不敢直接回应。“<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%8D%81%E4%B8%80.md#1">十一</a>”来临，中共再次陷入前所未有的内外恐慌。</p>
+	<p>【大纪元2019年09月26日讯】9月24日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在联合国大会演讲，对北京“火力全开”。川普在发言中，进一步阐明了，美国纠正与中国不平衡贸易的决心不可动摇，并全面展示美国实力，高调向北京摊牌。</p>
+<p>在演讲中，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>发出了明确的信息：不仅要赢得<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%B8%E6%98%93%E6%88%98.md#1">贸易战</a>，还要驱除<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>，更要维护天赋人权。</p>
+<p>从2016年美国总统选举开始，川普首先展示了“美国优先”政策，不少人还以为，美国只能顾自己了。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>也被“蒙了”，私下暗笑，美国在全球的领导力在持续下降，自顾不暇，竟以“商人”看扁川普。</p>
+<p>这一次联大发言，川普高调宣布，美国将领导世界走出混乱，建立新的秩序。川普也直接点名，目前世界乱局的始作俑者，就是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>，治理乱局，先从治理中共开始。</p>
+<p>川普的发言中，关于对中国贸易的部分，直接向中共高调摊牌；如果贯穿整个发言，以及在联合国大会的特殊场合，川普无异于向中共下了战书。川普的高调发言，其它国家听了，可能还只是有些惊讶，对中共而言，却如坐针毡，十分恐慌，甚至不敢直接回应。“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%81%E4%B8%80.md#1">十一</a>”来临，中共再次陷入前所未有的内外恐慌。</p>
 <h2>川普首先展示军事实力</h2>
 <p>每逢大型场合演讲，或较大规模回答记者问题时，川普总是首先提及美国的军事实力。在美国国内，可能有人说，是为了展示政绩，两年多来，川普的国防预算大增，他称重建了军队，也是他总统竞选时的承诺之一。</p>
 <p>那么在联合国大会，川普在向谁展示军力呢？</p>
@@ -23,63 +23,62 @@
 <p>川普每次发言，展示完军力，也马上就展示经济实力。这次联大发言，也不例外，如他所说，美国经济在全世界一枝独秀，展现出不凡的活力，消费持续增长，失业率历史最低，工资收入增加，还没有通货膨胀，美国股市从今年初至今，大幅增长20%以上。</p>
 <p>川普一直希望美联储加速降息，应对全世界的降息潮、货币贬值和货币宽松，但美联储却不紧不慢，认为所有的数据都很好，没有衰退的迹象。在去年紧锣密鼓的连串升息后，美联储今年却挤牙膏式地降息，仅应对可能的全球经济风险，显示出对美国经济的强大信心。</p>
 <p>2017年，川普一到任，马上实施大幅减税政策，让利给企业，同时取消大量政府限制经济的法令，还开放了美国石油、天然气的生产，对外完成多个关键贸易谈判，既吸引本土企业回流，也引导外国企业大量投资美国。两年多时间，美国经济就令全世界羡慕不已，正如川普自己所说，比起选举时的承诺，他已经做到了更多。</p>
-<p>川普要展示政绩给美国民众，可以理解。在联大开会，只是要出风头吗？是要给经济不稳定的欧洲国家难堪吗？当然都不是，川普同样是展示给中共看的，<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E8%B4%B8%E6%98%93%E6%88%98.md#1">贸易战</a>已经打响，美国经济实力占有绝对优势，贸易战以来，美国也有一些损失，但实际对美国经济影响不大，美国不可能在贸易战中让步，而且还有实力继续加码。</p>
+<p>川普要展示政绩给美国民众，可以理解。在联大开会，只是要出风头吗？是要给经济不稳定的欧洲国家难堪吗？当然都不是，川普同样是展示给中共看的，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%B8%E6%98%93%E6%88%98.md#1">贸易战</a>已经打响，美国经济实力占有绝对优势，贸易战以来，美国也有一些损失，但实际对美国经济影响不大，美国不可能在贸易战中让步，而且还有实力继续加码。</p>
 <h2>川普还揭露中共经济败象、“游戏”WTO规则和应对贸易战失策</h2>
 <p>展示完美国军事实力和经济实力，川普立刻揭开中共治下的经济败象，大量供应链正在迁出中国。这一次，川普鲜有地拿出6万家企业的数据，称美国已经失去了6万家企业，全因为中共“游戏”WTO规则，世界“第二大经济体”仍然坚称“发展中国家”，设置市场准入的重重障碍，强制技术转让、盗窃知识产权，反以大量补贴方式，向美国大肆倾销，导致巨额的贸易不平衡。</p>
 <p>这一次，川普准确使用了“游戏”（game）这个词，描述中共如何“游戏”对待WTO的规则，也是很少见的，特别是在联合国大会上。</p>
 <p>6万家企业，这个数据，恐怕也是川普贸易战的一个指标，再打下去，很可能有逾万家企业离开中国，中国经济会是什么样？所以川普也很肯定地说，是中共更需要协议，不然就会失去众多企业，造成大量失业，还要继续支付数百亿美元的关税。</p>
 <p>如果协议还签不成，川普也明确暗示，关税可能再度提高。几周前，川普的民间经济顾问白瑞邦，接受《南华早报》采访时，表示川普可能把关税提高到50%至100%，那样，关税总额将是千亿美元记。</p>
 <p>川普也说不希望如此，其实是在告诉中国的老百姓和全世界，中共拖延签协议，遭致巨大经济损失，很不明智，只是为了中共的特权和统治需要，完全无视老百姓的福祉，对川普这个民选总统来说，似乎是不可理解的。</p>
-<h2>川普坚定驱除<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>并建立国际新秩序</h2>
-<p>联合国大会，正值中共要命的“<ahref="https://github.com/pjtbkq381/djy/blob/master/gb/tag/%E5%8D%81%E4%B8%80.md#1">十一</a>”前夕，看似巧合，实属天意。中共内部争斗，目前还没有平息的迹象，香港“反送中”可能延烧大陆，中共首脑无暇参加联合国大会，放弃了与美国和世界各国沟通的良好时机。此时，中共很希望和美国暂时达成默契，以再次购买美国农产品，换取美国的关税延期，不要在“十一”添堵。</p>
+<h2>川普坚定驱除<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>并建立国际新秩序</h2>
+<p>联合国大会，正值中共要命的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%81%E4%B8%80.md#1">十一</a>”前夕，看似巧合，实属天意。中共内部争斗，目前还没有平息的迹象，香港“反送中”可能延烧大陆，中共首脑无暇参加联合国大会，放弃了与美国和世界各国沟通的良好时机。此时，中共很希望和美国暂时达成默契，以再次购买美国农产品，换取美国的关税延期，不要在“十一”添堵。</p>
 <p>但川普却没有丝毫的妥协，恰恰利用联合国大会，在中共精心筹备“十一”之际，直接向共产主义宣战，把共产主义和恐怖主义、纳粹相提并论，指出共产主义是目前世界乱局的根源。</p>
 <p>川普的贸易战，直接上升到了意识形态的高度。川普之前还主持了联合国的人权主题大会，明确提出保护宗教信仰自由和抵制各种宗教迫害。本次发言，川普更直截了当，对香港“反送中”表态，支持民主自由，反对强制镇压手段，直接要求中共履行“一国两制”承诺。</p>
 <p>川普描绘的国际新秩序，清晰地指出了驱除共产主义独裁，引领全世界走向民主、自由、法制和普世价值的路线图。</p>
 <p>有过军校经历的川普，一定研习了美国著名将军麦克?阿瑟的著作，这位传奇的将军曾在国会发表演说《老兵不死》（Old Soldiers Never Die）。其中有这样一段话，“有些人却提出各种各样的理由要姑息红色中共，他们对历史上清晰的教训视而不见，因为历史分毫无误地告诉我们：姑息只能导致下一场更血腥的战争，妥协带来的只是虚假的和平，历史上没有任何一个先例，显示姑息和妥协会有好结局。就像面对敲诈与勒索一样，一味地姑息只能为新的，一次比一次更大的勒索打下基础，直到它被真正制止为止。”</p>
 <p>川普正在实践着麦克?阿瑟将军的至理名言，也许正如川普自己半开玩笑所说，“他是神选择的”。#</p>
-<p><a width="640" b="360" src=""></a><a href="https://git.io/JTdD2"><img width="600" src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/U5jt6wNWHMQ?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><a width="640" b="360" src=""></a><a href="https://dfu0th2rj4x8t.cloudfront.net/Q2rbFnmnt"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/U5jt6wNWHMQ?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <p>责任编辑：高义</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/9/20/n8317517.md#1">涉嫌逃关税 中国忠旺集团遭美商务部调查</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/12/22/n8619110.md#1">为保护美制造业 川普或征收5%进口关税</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/7/12/n10558369.md#1">美国50州经济实力排名 华盛顿特区位列第六</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/19/1/19/n10988015.md#1">对抗中共悖离WTO 莱特希泽：美有经济实力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/20/n8317517.md#1">涉嫌逃关税 中国忠旺集团遭美商务部调查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/22/n8619110.md#1">为保护美制造业 川普或征收5%进口关税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/7/12/n10558369.md#1">美国50州经济实力排名 华盛顿特区位列第六</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/19/n10988015.md#1">对抗中共悖离WTO 莱特希泽：美有经济实力</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12516747.md#1">【大选观察】万众瞩目 选举夜4大看点和悬念</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/9/28/n12437702.md#1">【思想领袖】林赛：美左派破坏圣像 犹如文革</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/2/n12519251.md#1">签名遇妇人暖送1卷大钞 澎恰恰泪崩：我会加油</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12517068.md#1">英国富豪拟用空气生产钻石 成本低又环保</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/10/30/n12514158.md#1">缺维生素B12易晕眩！经期这样吃 补血抗疲劳</a></li>
-<li><a href="https://github.com/pjtbkq381/djy/blob/master/gb/20/11/1/n12516971.md#1">印度阿萨姆茶价格创新高 每公斤上千美元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pjtbkq381/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/26/n11547362.htm">洪微：川普高调摊牌? 北京“十一”更恐慌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/26/n11547362.htm">洪微：川普高调摊牌? 北京“十一”更恐慌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pjtbkq381/djy/blob/master/gb/19/9/26/n11547362.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pjtbkq381/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pjtbkq381/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pjtbkq381/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pjtbkq381/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/9/26/n11547362.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
